hphp/test/zend/good/ext/dom/tests/DOMCharacterData_deleteData_basic_001.php
<?php
$document = new DOMDocument;
$root = $document->createElement('root');
$document->appendChild($root);

$cdata = $document->createCDATASection('test');
$root->appendChild($cdata);
$cdata->deleteData(1, 10);
var_dump($cdata->data);
?>
